border-image with opacity

--- a/index.html
+++ b/index.html
@@ -148,22 +148,20 @@
 				</div>
 			</div>
 		</div>
-		<div class="signup-section">
-			<div class="container clearfix">
-				<h2 class="centered">
-					</i>Recibe noticias en tu email</h2>
+		<div class="signup-section clearfix">
+			<div class="container striped-border" style="padding-top:30px; padding-bottom:45px">
+				<h2 class="centered" style="padding:0px">Recibe noticias en tu email</h2>
 				<form id="signupForm" class="inline-form" action="signup.php" method="post">
-					<i class="fa fa-envelope-o fa-2x" aria-hidden="true" style="padding-top:11px;padding-right: 5px;"></i>
+					<i class="fa fa-envelope-o fa-2x o-4" aria-hidden="true" style="padding-top:11px;padding-right: 5px;"></i>
 					<input type="email" id="emailSignup" placeholder="micorreo@ejemplo.com">
 					<button type="submit">
 						<i class="fa fa-paper-plane" aria-hidden="true"></i>
 					</button>
 				</form>
-				<p class="smallprint">No enviamos spam y puedes cancelar en cualquier momento.</p>
 			</div>
 		</div>
 		<div class="background-light clearfix">
-			<div class="container clearfix">
+			<div class="container">
 				<h2 class="centered">Preguntas frecuentes</h2>
 				<div class="faq-content">
 					<div class="primary col">
