--- a/index.html
+++ b/index.html
@@ -74,18 +74,16 @@
 				un gozo."</p>
 			<p class="prayer-by">fr. Roger de Taizé</p>
 		</div>
-		<div class="signup-section clearfix" style="padding-top: 0px; padding-bottom: 70px;">
+		<div class="centered" style="margin-top:10px; padding-top: 0px; padding-bottom: 70px;">
 			<div class="container striped-border" style="padding-top:30px; padding-bottom:45px">
-				<div class="">
-					<h2 class="centered" style="padding:0px">Recibe noticias en tu email</h2>
-					<form id="signupForm" class="inline-form" action="signup.php" method="post">
-						<i class="fa fa-envelope-o fa-2x o-4" aria-hidden="true" style="padding-top:11px;padding-right: 5px;"></i>
-						<input type="email" id="emailSignup" placeholder="micorreo@ejemplo.com">
-						<button type="submit">
-						<i class="fa fa-paper-plane" aria-hidden="true"></i>
-					</button>
-					</form>
-				</div>
+				<h2 class="centered" style="padding:0px">Recibe noticias en tu email</h2>
+				<form id="signupForm" class="inline-form" action="signup.php" method="post">
+					<i class="fa fa-envelope-o fa-2x o-4" aria-hidden="true" style="padding-top:11px;padding-right: 5px;"></i>
+					<input type="email" id="emailSignup" placeholder="micorreo@ejemplo.com">
+					<button type="submit">
+							<i class="fa fa-paper-plane" aria-hidden="true"></i>
+						</button>
+				</form>
 			</div>
 		</div>
 		<div class="background-light">
