--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
 <head>
 	<title>¡Levántate, que tu alma viva!</title>
 	<link rel="stylesheet" href="css/normalize.css">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ"
+	 crossorigin="anonymous">
 	<link rel="stylesheet" href="css/font-awesome.min.css">
 	<link rel="stylesheet" href="css/style.css">
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro">
@@ -13,52 +15,52 @@
 </head>
 
 <body>
-	<header class="main-header clearfix centered">
+	<header class="main-header text-center">
 		<span> </span>
 		<h1>Terapéutica de las Enfermedades Espirituales</h1>
-		<h4>8-10 Septiembre 2017</h4>
-		<h4>Suchitlán, Colima</h4>
+		<h3>8-10 Septiembre 2017</h3>
+		<h3>Suchitlán, Colima</h3>
 	</header>
-	<div class="main-content galleria">
-		<h2 class="centered invitation">La Parroquia de N.S. del Perpetuo Socorro invita</h2>
-		<div class="container intro centered">
+	<div class="main-content galleria text-center">
+		<h2 class="pt-4 pb-0">La Parroquia de N.S. del Perpetuo Socorro invita</h2>
+		<div class="container intro">
 			A un fin de semana donde juntos reflexionamos más a fondo sobre las enfermedades espirituales y la terapéutica o remedios
 			que señalan los Padres de la Iglesia apuntando a Cristo como el Médico.
 		</div>
-		<div class="subheader centered">
+		<div class="subheader">
 			<div class="container">egoísmo &middot resentimiento &middot cólera &middot depresión &middot orgullo &middot miedo &middot rencor &middot lujuria
 				&middot avaricia &middot odio &middot tristeza &middot ansiedad
 			</div>
 		</div>
-		<div class="container clearfix">
-			<div class="clearfix">
-				<div class="primary-30 col">
+		<div class="container">
+			<div class="row row-padded">
+				<div class="col-lg-4">
+					<a href="img\platica.jpg"><img class="circle" width="140" height="140" src="img\platica.jpg"></a>
 					<h3>Pláticas</h3>
-					<a href="img\platica.jpg"><img class="feat-image" data-title="Pláticas y exposiciones" data-description="Exposiciones y pláticas presentando los temas" src="img\platica.jpg"></a>
-					<p>Durante el fin de semana se tienen pláticas presentando los temas, representaciones, pequeñas obras de teatro y momentos
+					<p class="text-left pt-3">Durante el fin de semana se tienen pláticas presentando los temas, representaciones, pequeñas obras de teatro y momentos
 						para compartir en pequeños grupos.</p>
 				</div>
-				<div class="secondary-30 col">
+				<div class="col-lg-4">
+					<a href="img\oracion.jpg"><img class="circle" width="140" height="140" src="img\oracion.jpg"></a>
 					<h3>Oración común</h3>
-					<a href="img\oracion.jpg"><img class="feat-image" data-title="Oración de la luz" data-description="Oración con cantos de Taizé" src="img\oracion.jpg"></a>
-					<p>El viernes y sábado por la noche se hace una oración con cantos de Taizé. El viernes se reza en torno al icono de la
+					<p class="text-left pt-3">El viernes y sábado por la noche se hace una oración con cantos de Taizé. El viernes se reza en torno al icono de la
 						cruz. El sábado por la noche una oración que celebra la luz de Cristo Resucitado.</p>
 				</div>
-				<div class="tertiary-30 col">
+				<div class="col-lg-4">
+					<a href="img\eucaristia.jpg"><img class="circle" width="140" height="140" src="img\eucaristia.jpg"></a>
 					<h3>Eucaristía y Sacramentos </h3>
-					<a href="img\eucaristia.jpg"><img class="feat-image" data-title="Eucaristía" data-description="Eucaristía en la capilla de la casa San José en Suchitlán, Colima." src="img\eucaristia.jpg"></a>
-					<p>Es posible para aquellos que deseen de acercarse al sacramento de la Reconciliación. El domingo se celebra la Eucaristía.</p>
+					<p class="text-left pt-3">Es posible para aquellos que deseen de acercarse al sacramento de la Reconciliación. El domingo se celebra la Eucaristía.</p>
 				</div>
 			</div>
 		</div>
-		<div class="container clearfix">
+		<div class="container pb-5">
 			<div class="welcome">
 				<div class="welcome-quote">
 					<p class="text-bold">"Que el Señor bendiga estos trabajos y nos ayude a responder a la misión que la Iglesia nos ha confiado.</p>
 					<p class="text-bold">¡Bienvenidos!"</p>
 					<div class="welcome-quote-by">
-						<p class="text-bold no-margin-bottom">Pbro. Eduardo Vázquez Tiscareño</p>
-						<p class="text-semibold no-margin-top no-margin-bottom">Párroco, Diócesis de Colima</p>
+						<p class="text-bold mb-0">Pbro. Eduardo Vázquez Tiscareño</p>
+						<p class="text-semibold mt-0 mb-0">Párroco, Diócesis de Colima</p>
 					</div>
 				</div>
 				<div class="welcome-img">
@@ -66,28 +68,9 @@
 				</div>
 			</div>
 		</div>
-		<div class="prayer-background">
-		</div>
-		<div class="container centered">
-			<p class="prayer">"Si para algunos, la oración en soledad es ardua, la belleza de una oración cantada en común, incluso entre dos o tres,
-				es un incomparable apoyo de la vida interior. A través de palabras sencillas, cantos largamente repetidos, puede irradiar
-				un gozo."</p>
-			<p class="prayer-by">fr. Roger de Taizé</p>
-		</div>
-		<div class="centered" style="margin-top:10px; padding-top: 0px; padding-bottom: 70px;">
-			<div class="container striped-border" style="padding-top:30px; padding-bottom:45px">
-				<h2 id="signupMsg" style="padding:0px">Recibe noticias en tu email</h2>
-				<form id="signupForm" class="inline-form" action="signup.php" method="post">
-					<i class="fa fa-envelope-o fa-2x o-4" aria-hidden="true" style="padding-top:11px;padding-right: 5px;"></i>
-					<input type="email" id="emailSignup" required placeholder="micorreo@ejemplo.com">
-					<button type="submit">
-							<i class="fa fa-paper-plane" aria-hidden="true"></i>
-						</button>
-				</form>
-			</div>
-		</div>
-		<div class="background-light">
-			<div class="container centered">
+		<div class="prayer-background"></div>
+		<div class="container">
+			<div class="row">
 				<div class="quote">
 					<p> La Iglesia es "como un laboratorio espiritual, donde se preparan los medicamentos a fin de que encontremos con qué sanar
 						las heridas que nos ha hecho el mundo"</p>
@@ -99,13 +82,47 @@
 				</div>
 			</div>
 		</div>
+		<div class="container">
+			<div class="col-lg-5 row row-padded">
+				<p class="prayer text-right">"Si para algunos, la oración en soledad es ardua, la belleza de una oración cantada en común, incluso entre dos o tres,
+					es un incomparable apoyo de la vida interior. A través de palabras sencillas, cantos largamente repetidos, puede irradiar
+					un gozo."</p>
+				<p class="prayer-by">fr. Roger de Taizé</p>
+			</div>
+		</div>
+		<div class="container panel">
+			<h3 id="signupMsg">Recibe noticias en tu email</h3>
+			<form id="signupForm" class="inline-form" action="signup.php" method="post">
+				<i class="fa fa-envelope-o fa-1-5x o-4" aria-hidden="true" style="padding-top:11px;padding-right: 5px;"></i>
+				<input type="email" id="emailSignup" required placeholder="micorreo@ejemplo.com">
+				<button type="submit">
+					<i class="fa fa-paper-plane" aria-hidden="true"></i>
+				</button>
+			</form>
+		</div>
+		<!--<div class="container">-->
+		<hr class="featurette divider">
+		<!--</div>-->
+		<!--<div class="background-light">
+			<div class="container">
+				<div class="quote">
+					<p> La Iglesia es "como un laboratorio espiritual, donde se preparan los medicamentos a fin de que encontremos con qué sanar
+						las heridas que nos ha hecho el mundo"</p>
+					<div class="author">
+						<img src="img\juan-crisostomo.jpg" alt="Juan Crisóstomo" class="circle">
+						<p>San Juan Crisóstomo</p>
+						<p class="more-info">siglo IV, Obispo de Constantinopla</p>
+					</div>
+				</div>
+			</div>
+		</div>-->
 		<div class="container clearfix">
-			<h2 class="centered">Contenido</h2>
+			<h2>Contenido</h2>
 			<div class="book-cover">
 				<img src="img\book-cover.jpg" alt="Portada del libro">
-				<p class="centered italic">Basado en el libro "Terapéutica de las Enfermedades Espirituales" del ortodoxo francés Jean-Claude Larchet.</p>
+				<p class="italic">Basado en el libro "Terapéutica de las Enfermedades Espirituales" del ortodoxo francés Jean-Claude Larchet.</p>
 			</div>
-			<div class="program">
+			<div class="program text-left">
 				<ul>
 					<li>Salud primordial del hombre y el origen de las enfermedades</li>
 					<li>Patología del hombre caído:</li>
@@ -145,13 +162,14 @@
 				</ul>
 			</div>
 		</div>
-		<div class="container clearfix">
+		<div class="container">
+			<hr class="featurette divider">
 			<div class="welcome">
 				<div class="welcome-quote bishop">
 					<p class="text-bold">"Estoy en comunión con ustedes y encomiendo a Dios sus actividades"</p>
 					<div class="welcome-quote-by">
-						<p class="text-bold no-margin-bottom">Mons. José Luis Amezcua Melgoza</p>
-						<p class="text-semibold no-margin-top no-margin-bottom">X Obispo, Diócesis de Colima</p>
+						<p class="text-bold mb-0">Mons. José Luis Amezcua Melgoza</p>
+						<p class="text-semibold mt-0 mb-0">X Obispo, Diócesis de Colima</p>
 					</div>
 				</div>
 				<div class="welcome-img">
@@ -159,9 +177,10 @@
 				</div>
 			</div>
 		</div>
-		<div class="background-light clearfix">
+		<hr class="divider mt-5 mb-0">
+		<div class="background-light clearfix pt-5 pb-5">
 			<div class="container">
-				<h2 class="centered">Preguntas frecuentes</h2>
+				<h2>Preguntas frecuentes</h2>
 				<div class="faq-content">
 					<div class="primary col">
 						<div class="faq-card ">
@@ -243,9 +262,9 @@
 				</div>
 			</div>
 		</div>
-		<div class="background-dark clearfix">
-			<div class="container clearfix">
-				<h2 class="centered">Aparta tu lugar</h2>
+		<div class="background-dark divider pt-5 pb-4">
+			<div class="container">
+				<h2>Aparta tu lugar</h2>
 				<form id="registerForm" class="splash-form" action="register.php" method="post">
 					<p>
 						<label for="name">Nombre*</label>
@@ -257,7 +276,7 @@
 					</p>
 					<p>
 						<label for="phone">Celular</label>
-						<input id="phone" name="phone" type="tel" placeholder="¿Algún número al que te podamos hablar? (opcional)">
+						<input id="phone" name="phone" type="tel" placeholder="¿Algún número al que te podamos hablar?">
 					</p>
 					<p>
 						<label for="comments">Comentarios</label>
@@ -272,7 +291,7 @@
 		</div>
 		<div class="group-photo-background"> </div>
 	</div>
-	<footer class="main-footer centered">
+	<footer class="main-footer text-center">
 		<a class="link-social" href="https://twitter.com/quetualmaviva">
 			<img src="img\twitter.svg" alt="Twitter">
 		</a>
@@ -283,6 +302,8 @@
 	</footer>
 	<script src="http://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.1.1.min.js"></script>
 	<script src="http://ajax.aspnetcdn.com/ajax/jquery.validate/1.15.0/jquery.validate.min.js"></script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn"
+	 crossorigin="anonymous"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/galleria/1.5.7/galleria.min.js"></script>
 	<script src="scripts\signup.js"></script>
 	<script src="scripts\registerForm.js"></script>
