--- a/index.html
+++ b/index.html
@@ -90,32 +90,24 @@
 				<p class="prayer-by">fr. Roger de Taizé</p>
 			</div>
 		</div>
-		<div class="container panel">
-			<h3 id="signupMsg">Recibe noticias en tu email</h3>
-			<form id="signupForm" class="inline-form" action="signup.php" method="post">
-				<i class="fa fa-envelope-o fa-1-5x o-4" aria-hidden="true" style="padding-top:11px;padding-right: 5px;"></i>
-				<input type="email" id="emailSignup" required placeholder="micorreo@ejemplo.com">
-				<button type="submit">
-					<i class="fa fa-paper-plane" aria-hidden="true"></i>
-				</button>
-			</form>
-		</div>
-		<!--<div class="container">-->
-		<hr class="featurette divider">
-		<!--</div>-->
-		<!--<div class="background-light">
-			<div class="container">
-				<div class="quote">
-					<p> La Iglesia es "como un laboratorio espiritual, donde se preparan los medicamentos a fin de que encontremos con qué sanar
-						las heridas que nos ha hecho el mundo"</p>
-					<div class="author">
-						<img src="img\juan-crisostomo.jpg" alt="Juan Crisóstomo" class="circle">
-						<p>San Juan Crisóstomo</p>
-						<p class="more-info">siglo IV, Obispo de Constantinopla</p>
+		<div class="row row-backbordered">
+			<div class="container panel panel-floating panel-floating-inline col-9 col-lg-8 mb-4">
+				<div class="panel-body py-3">
+					<div class="panel-content col-5">
+						<h3 id="signupMsg" class="text-left">Recibe noticias en tu email</h3>
+					</div>
+					<div class="panel-actions col-7">
+						<form id="signupForm" class="inline-form" action="signup.php" method="post">
+							<i class="fa fa-envelope-o fa-1-5x o-4" aria-hidden="true" style="padding-top:11px;padding-right: 5px;"></i>
+							<input type="email" id="emailSignup" required placeholder="micorreo@ejemplo.com">
+							<button type="submit">
+									<i class="fa fa-paper-plane" aria-hidden="true"></i>
+								</button>
+						</form>
 					</div>
 				</div>
 			</div>
-		</div>-->
+		</div>
 		<div class="container clearfix">
 			<h2>Contenido</h2>
 			<div class="book-cover">
@@ -162,7 +154,7 @@
 				</ul>
 			</div>
 		</div>
-		<div class="container">
+		<div class="container pt-0">
 			<hr class="featurette divider">
 			<div class="welcome">
 				<div class="welcome-quote bishop">
@@ -293,11 +285,11 @@
 	</div>
 	<footer class="main-footer text-center">
 		<a class="link-social" href="https://twitter.com/quetualmaviva">
-			<img src="img\twitter.svg" alt="Twitter">
-		</a>
+		<img src="img\twitter.svg" alt="Twitter">
+	</a>
 		<a class="link-social" href="https://www.facebook.com/Que-tu-alma-viva-143514645719150">
-			<img src="img\facebook.svg" alt="Facebook">
-		</a>
+		<img src="img\facebook.svg" alt="Facebook">
+	</a>
 		<p></p>
 	</footer>
 	<script src="http://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.1.1.min.js"></script>
