--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 		<h3>8-10 Septiembre 2017</h3>
 		<h3>Suchitlán, Colima</h3>
 	</header>
-	<div class="main-content galleria text-center">
+	<div class="main-content text-center">
 		<h2 class="pt-4 pb-0">La Parroquia de N.S. del Perpetuo Socorro invita</h2>
 		<div class="container intro">
 			A un fin de semana donde juntos reflexionamos más a fondo sobre las enfermedades espirituales y la terapéutica o remedios
@@ -56,8 +56,8 @@
 		<div class="container pb-5">
 			<div class="welcome">
 				<div class="welcome-quote">
-					<p class="text-bold">"Que el Señor bendiga estos trabajos y nos ayude a responder a la misión que la Iglesia nos ha confiado.</p>
-					<p class="text-bold">¡Bienvenidos!"</p>
+					<p>"Que el Señor bendiga estos trabajos y nos ayude a responder a la misión que la Iglesia nos ha confiado.</p>
+					<p>¡Bienvenidos!"</p>
 					<div class="welcome-quote-by">
 						<p class="text-bold mb-0">Pbro. Eduardo Vázquez Tiscareño</p>
 						<p class="text-semibold mt-0 mb-0">Párroco, Diócesis de Colima</p>
@@ -69,27 +69,26 @@
 			</div>
 		</div>
 		<div class="prayer-background"></div>
-		<div class="container">
-			<div class="row">
-				<div class="quote">
-					<p> La Iglesia es "como un laboratorio espiritual, donde se preparan los medicamentos a fin de que encontremos con qué sanar
-						las heridas que nos ha hecho el mundo"</p>
-					<div class="author">
-						<img src="img\juan-crisostomo.jpg" alt="Juan Crisóstomo" class="circle">
-						<p>San Juan Crisóstomo</p>
-						<p class="more-info">siglo IV, Obispo de Constantinopla</p>
-					</div>
+		<hr class="featurette">
+		<div class="container clearfix pb-5">
+			<div class="quote col-lg-7 pull-right-lg-7">
+				<p> La Iglesia es "como un laboratorio espiritual, donde se preparan los medicamentos a fin de que encontremos con qué sanar
+					las heridas que nos ha hecho el mundo"</p>
+				<div class="author">
+					<img src="img\juan-crisostomo.jpg" alt="Juan Crisóstomo" class="circle">
+					<p>San Juan Crisóstomo</p>
+					<p class="more-info">siglo IV, Obispo de Constantinopla</p>
 				</div>
 			</div>
 		</div>
-		<div class="container">
+		<!--<div class="container">
 			<div class="col-lg-5 row row-padded">
 				<p class="prayer text-right">"Si para algunos, la oración en soledad es ardua, la belleza de una oración cantada en común, incluso entre dos o tres,
 					es un incomparable apoyo de la vida interior. A través de palabras sencillas, cantos largamente repetidos, puede irradiar
 					un gozo."</p>
 				<p class="prayer-by">fr. Roger de Taizé</p>
 			</div>
-		</div>
+		</div>-->
 		<div class="row row-backbordered">
 			<div class="container panel panel-floating panel-floating-inline col-9 col-lg-8 mb-4">
 				<div class="panel-body py-3">
@@ -285,11 +284,11 @@
 	</div>
 	<footer class="main-footer text-center">
 		<a class="link-social" href="https://twitter.com/quetualmaviva">
-		<img src="img\twitter.svg" alt="Twitter">
-	</a>
+			<img src="img\twitter.svg" alt="Twitter">
+		</a>
 		<a class="link-social" href="https://www.facebook.com/Que-tu-alma-viva-143514645719150">
-		<img src="img\facebook.svg" alt="Facebook">
-	</a>
+			<img src="img\facebook.svg" alt="Facebook">
+		</a>
 		<p></p>
 	</footer>
 	<script src="http://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.1.1.min.js"></script>
