--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
 				<div class="welcome-quote">
 					<p>"Que el Señor bendiga estos trabajos y nos ayude a responder a la misión que la Iglesia nos ha confiado.</p>
 					<p>¡Bienvenidos!"</p>
-					<div class="welcome-quote-by">
-						<p class="text-bold mb-0">Pbro. Eduardo Vázquez Tiscareño</p>
-						<p class="text-semibold mt-0 mb-0">Párroco, Diócesis de Colima</p>
+					<div>
+						<p class="text-bold mt-5 mb-0">Pbro. Eduardo Vázquez Tiscareño</p>
+						<p class="mt-0 mb-0">Párroco, Diócesis de Colima</p>
 					</div>
 				</div>
 				<div class="welcome-img">
@@ -71,24 +71,16 @@
 		<div class="prayer-background"></div>
 		<hr class="featurette">
 		<div class="container clearfix pb-5">
-			<div class="quote col-lg-7 pull-right-lg-7">
+			<div class="quote col-lg-8 pull-right-lg-7">
 				<p> La Iglesia es "como un laboratorio espiritual, donde se preparan los medicamentos a fin de que encontremos con qué sanar
 					las heridas que nos ha hecho el mundo"</p>
-				<div class="author">
-					<img src="img\juan-crisostomo.jpg" alt="Juan Crisóstomo" class="circle">
-					<p>San Juan Crisóstomo</p>
+				<div class="quote-by">
+					<!--<img src="img\juan-crisostomo.jpg" alt="Juan Crisóstomo" class="circle">-->
+					<p>- San Juan Crisóstomo</p>
 					<p class="more-info">siglo IV, Obispo de Constantinopla</p>
 				</div>
 			</div>
 		</div>
-		<!--<div class="container">
-			<div class="col-lg-5 row row-padded">
-				<p class="prayer text-right">"Si para algunos, la oración en soledad es ardua, la belleza de una oración cantada en común, incluso entre dos o tres,
-					es un incomparable apoyo de la vida interior. A través de palabras sencillas, cantos largamente repetidos, puede irradiar
-					un gozo."</p>
-				<p class="prayer-by">fr. Roger de Taizé</p>
-			</div>
-		</div>-->
 		<div class="row row-backbordered">
 			<div class="container panel panel-floating panel-floating-inline col-9 col-lg-8 mb-4">
 				<div class="panel-body py-3">
@@ -169,10 +161,10 @@
 			</div>
 		</div>
 		<hr class="divider mt-5 mb-0">
-		<div class="background-light clearfix pt-5 pb-5">
+		<div class="background-light clearfix pt-5 pb-0">
 			<div class="container">
 				<h2>Preguntas frecuentes</h2>
-				<div class="faq-content">
+				<div class="faq-content clearfix">
 					<div class="primary col">
 						<div class="faq-card ">
 							<h3 class="faq-title">¿Quién organiza?</h3>
@@ -248,6 +240,16 @@
 								organizado por la comunidad de Taizé. Se han hecho, desde entonces, 19 retiros con la participación de más de 700
 								personas.
 							</p>
+						</div>
+					</div>
+				</div>
+				<div class="container pull-left text-left pl-0">
+					<div class="quote">
+						<p>"Si para algunos, la oración en soledad es ardua, la belleza de una oración cantada en común, incluso entre dos o tres,
+							es un incomparable apoyo de la vida interior. A través de palabras sencillas, cantos largamente repetidos, puede irradiar
+							un gozo."</p>
+						<div class="quote-by">
+							<p>- fr. Roger de Taizé</p>
 						</div>
 					</div>
 				</div>
