add thumbnail gallery

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ"
 	 crossorigin="anonymous">
 	<link rel="stylesheet" href="css/font-awesome.min.css">
+	<link rel="stylesheet" href="css/lightslider.css" type="text/css" />
 	<link rel="stylesheet" href="css/style.css">
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro">
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato:300">
@@ -32,28 +33,28 @@
 				&middot avaricia &middot odio &middot tristeza &middot ansiedad
 			</div>
 		</div>
-		<div class="container">
+		<div class="container pb-0">
 			<div class="row row-padded">
 				<div class="col-lg-4">
-					<a href="img\platica.jpg"><img class="circle" width="140" height="140" src="img\platica.jpg"></a>
+					<a href="img\platica.jpg"><img class="circle mb-4" width="140" height="140" src="img\platica.jpg"></a>
 					<h3>Pláticas</h3>
 					<p class="text-left pt-3">Durante el fin de semana se tienen pláticas presentando los temas, representaciones, pequeñas obras de teatro y momentos
 						para compartir en pequeños grupos.</p>
 				</div>
 				<div class="col-lg-4">
-					<a href="img\oracion.jpg"><img class="circle" width="140" height="140" src="img\oracion.jpg"></a>
+					<a href="img\oracion.jpg"><img class="circle mb-4" width="140" height="140" src="img\oracion.jpg"></a>
 					<h3>Oración común</h3>
 					<p class="text-left pt-3">El viernes y sábado por la noche se hace una oración con cantos de Taizé. El viernes se reza en torno al icono de la
 						cruz. El sábado por la noche una oración que celebra la luz de Cristo Resucitado.</p>
 				</div>
 				<div class="col-lg-4">
-					<a href="img\eucaristia.jpg"><img class="circle" width="140" height="140" src="img\eucaristia.jpg"></a>
+					<a href="img\eucaristia.jpg"><img class="circle mb-4" width="140" height="140" src="img\eucaristia.jpg"></a>
 					<h3>Eucaristía y Sacramentos </h3>
 					<p class="text-left pt-3">Es posible para aquellos que deseen de acercarse al sacramento de la Reconciliación. El domingo se celebra la Eucaristía.</p>
 				</div>
 			</div>
 		</div>
-		<div class="container pb-5">
+		<div class="container pt-2 pb-5">
 			<div class="welcome">
 				<div class="welcome-quote">
 					<p>"Que el Señor bendiga estos trabajos y nos ayude a responder a la misión que la Iglesia nos ha confiado.</p>
@@ -68,9 +69,67 @@
 				</div>
 			</div>
 		</div>
-		<div class="prayer-background"></div>
+		<div class="container">
+			<div class="demo">
+				<div class="item">
+					<div class="clearfix" style="max-width:640px;">
+						<ul id="image-gallery" class="gallery list-unstyled cS-hidden">
+							<li data-thumb="img/pictures/thumbs/galeria33.jpg">
+								<img src="img/pictures/galeria33.jpg" />
+							</li>
+							<li data-thumb="img/pictures/thumbs/galeria20.jpg">
+								<img src="img/pictures/galeria20.jpg" />
+							</li>
+							<li data-thumb="img/pictures/thumbs/casa4.jpg">
+								<img src="img/pictures/casa4.jpg" />
+							</li>
+							<li data-thumb="img/pictures/thumbs/galeria11.jpg">
+								<img src="img/pictures/galeria11.jpg" />
+							</li>
+							<li data-thumb="img/pictures/thumbs/galeria17.jpg">
+								<img src="img/pictures/galeria17.jpg" />
+							</li>
+							<li data-thumb="img/pictures/thumbs/galeria15.jpg">
+								<img src="img/pictures/galeria15.jpg" />
+							</li>
+							<li data-thumb="img/pictures/thumbs/galeria34.jpg">
+								<img src="img/pictures/galeria34.jpg" />
+							</li>
+							<li data-thumb="img/pictures/thumbs/galeria46.jpg">
+								<img src="img/pictures/galeria46.jpg" />
+							</li>
+							<li data-thumb="img/pictures/thumbs/galeria39.jpg">
+								<img src="img/pictures/galeria39.jpg" />
+							</li>
+							<li data-thumb="img/pictures/thumbs/galeria31.jpg">
+								<img src="img/pictures/galeria31.jpg" />
+							</li>
+							<li data-thumb="img/pictures/thumbs/galeria32.jpg">
+								<img src="img/pictures/galeria32.jpg" />
+							</li>
+							<li data-thumb="img/pictures/thumbs/galeria30.jpg">
+								<img src="img/pictures/galeria30.jpg" />
+							</li>
+							<li data-thumb="img/pictures/thumbs/galeria29.jpg">
+								<img src="img/pictures/galeria29.jpg" />
+							</li>
+							<li data-thumb="img/pictures/thumbs/galeria28.jpg">
+								<img src="img/pictures/galeria28.jpg" />
+							</li>
+							<li data-thumb="img/pictures/thumbs/galeria22.jpg">
+								<img src="img/pictures/galeria22.jpg" />
+							</li>
+							<li data-thumb="img/pictures/thumbs/galeria23.jpg">
+								<img src="img/pictures/galeria23.jpg" />
+							</li>
+						</ul>
+					</div>
+				</div>
+			</div>
+		</div>
+		<!-- container -->
 		<hr class="featurette">
-		<div class="container clearfix pb-5">
+		<div class="container clearfix pb-5 mb-4">
 			<div class="quote col-lg-8 pull-right-lg-7">
 				<p> La Iglesia es "como un laboratorio espiritual, donde se preparan los medicamentos a fin de que encontremos con qué sanar
 					las heridas que nos ha hecho el mundo"</p>
@@ -160,7 +219,8 @@
 				</div>
 			</div>
 		</div>
-		<hr class="divider mt-5 mb-0">
+		<div class="prayer-background"></div>
+		<hr class="divider mt-0 mb-0">
 		<div class="background-light clearfix pt-5 pb-0">
 			<div class="container">
 				<h2>Preguntas frecuentes</h2>
@@ -243,12 +303,12 @@
 						</div>
 					</div>
 				</div>
-				<div class="container pull-left text-left pl-0">
+				<div class="container pull-left text-left pl-0 pb-5">
 					<div class="quote">
 						<p>"Si para algunos, la oración en soledad es ardua, la belleza de una oración cantada en común, incluso entre dos o tres,
 							es un incomparable apoyo de la vida interior. A través de palabras sencillas, cantos largamente repetidos, puede irradiar
 							un gozo."</p>
-						<div class="quote-by">
+						<div class="quote-by pull-right pb-3">
 							<p>- fr. Roger de Taizé</p>
 						</div>
 					</div>
@@ -286,10 +346,10 @@
 	</div>
 	<footer class="main-footer text-center">
 		<a class="link-social" href="https://twitter.com/quetualmaviva">
-			<img src="img\twitter.svg" alt="Twitter">
+			<i class="fa fa-twitter"></i>
 		</a>
 		<a class="link-social" href="https://www.facebook.com/Que-tu-alma-viva-143514645719150">
-			<img src="img\facebook.svg" alt="Facebook">
+			<i class="fa fa-facebook"></i>
 		</a>
 		<p></p>
 	</footer>
@@ -297,7 +357,9 @@
 	<script src="http://ajax.aspnetcdn.com/ajax/jquery.validate/1.15.0/jquery.validate.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn"
 	 crossorigin="anonymous"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/galleria/1.5.7/galleria.min.js"></script>
+	<script src="scripts\plugins\lightslider.js"></script>
+	<!--<script src="https://cdnjs.cloudflare.com/ajax/libs/galleria/1.5.7/galleria.min.js"></script>-->
+	<script src="scripts\app.js"></script>
 	<script src="scripts\signup.js"></script>
 	<script src="scripts\registerForm.js"></script>
 	<script>
