--- a/index.html
+++ b/index.html
@@ -70,66 +70,68 @@
 			</div>
 		</div>
 		<div class="container">
-			<div class="demo">
-				<div class="item">
-					<div class="clearfix" style="max-width:640px;">
-						<ul id="image-gallery" class="gallery list-unstyled cS-hidden">
-							<li data-thumb="img/pictures/thumbs/galeria33.jpg">
-								<img src="img/pictures/galeria33.jpg" />
-							</li>
-							<li data-thumb="img/pictures/thumbs/galeria20.jpg">
-								<img src="img/pictures/galeria20.jpg" />
-							</li>
-							<li data-thumb="img/pictures/thumbs/casa4.jpg">
-								<img src="img/pictures/casa4.jpg" />
-							</li>
-							<li data-thumb="img/pictures/thumbs/galeria11.jpg">
-								<img src="img/pictures/galeria11.jpg" />
-							</li>
-							<li data-thumb="img/pictures/thumbs/galeria17.jpg">
-								<img src="img/pictures/galeria17.jpg" />
-							</li>
-							<li data-thumb="img/pictures/thumbs/galeria15.jpg">
-								<img src="img/pictures/galeria15.jpg" />
-							</li>
-							<li data-thumb="img/pictures/thumbs/galeria34.jpg">
-								<img src="img/pictures/galeria34.jpg" />
-							</li>
-							<li data-thumb="img/pictures/thumbs/galeria46.jpg">
-								<img src="img/pictures/galeria46.jpg" />
-							</li>
-							<li data-thumb="img/pictures/thumbs/galeria39.jpg">
-								<img src="img/pictures/galeria39.jpg" />
-							</li>
-							<li data-thumb="img/pictures/thumbs/galeria31.jpg">
-								<img src="img/pictures/galeria31.jpg" />
-							</li>
-							<li data-thumb="img/pictures/thumbs/galeria32.jpg">
-								<img src="img/pictures/galeria32.jpg" />
-							</li>
-							<li data-thumb="img/pictures/thumbs/galeria30.jpg">
-								<img src="img/pictures/galeria30.jpg" />
-							</li>
-							<li data-thumb="img/pictures/thumbs/galeria29.jpg">
-								<img src="img/pictures/galeria29.jpg" />
-							</li>
-							<li data-thumb="img/pictures/thumbs/galeria28.jpg">
-								<img src="img/pictures/galeria28.jpg" />
-							</li>
-							<li data-thumb="img/pictures/thumbs/galeria22.jpg">
-								<img src="img/pictures/galeria22.jpg" />
-							</li>
-							<li data-thumb="img/pictures/thumbs/galeria23.jpg">
-								<img src="img/pictures/galeria23.jpg" />
-							</li>
-						</ul>
+			<div class="row">
+				<div class="demo col-lg-8" style="margin: 0 auto">
+					<div class="item">
+						<div class="clearfix" style="max-width:640px;">
+							<ul id="image-gallery" class="gallery list-unstyled cS-hidden">
+								<li data-thumb="img/pictures/thumbs/galeria33.jpg">
+									<img src="img/pictures/galeria33.jpg" />
+								</li>
+								<li data-thumb="img/pictures/thumbs/galeria20.jpg">
+									<img src="img/pictures/galeria20.jpg" />
+								</li>
+								<li data-thumb="img/pictures/thumbs/casa4.jpg">
+									<img src="img/pictures/casa4.jpg" />
+								</li>
+								<li data-thumb="img/pictures/thumbs/galeria11.jpg">
+									<img src="img/pictures/galeria11.jpg" />
+								</li>
+								<li data-thumb="img/pictures/thumbs/galeria17.jpg">
+									<img src="img/pictures/galeria17.jpg" />
+								</li>
+								<li data-thumb="img/pictures/thumbs/galeria15.jpg">
+									<img src="img/pictures/galeria15.jpg" />
+								</li>
+								<li data-thumb="img/pictures/thumbs/galeria34.jpg">
+									<img src="img/pictures/galeria34.jpg" />
+								</li>
+								<li data-thumb="img/pictures/thumbs/galeria46.jpg">
+									<img src="img/pictures/galeria46.jpg" />
+								</li>
+								<li data-thumb="img/pictures/thumbs/galeria39.jpg">
+									<img src="img/pictures/galeria39.jpg" />
+								</li>
+								<li data-thumb="img/pictures/thumbs/galeria31.jpg">
+									<img src="img/pictures/galeria31.jpg" />
+								</li>
+								<li data-thumb="img/pictures/thumbs/galeria32.jpg">
+									<img src="img/pictures/galeria32.jpg" />
+								</li>
+								<li data-thumb="img/pictures/thumbs/galeria30.jpg">
+									<img src="img/pictures/galeria30.jpg" />
+								</li>
+								<li data-thumb="img/pictures/thumbs/galeria29.jpg">
+									<img src="img/pictures/galeria29.jpg" />
+								</li>
+								<li data-thumb="img/pictures/thumbs/galeria28.jpg">
+									<img src="img/pictures/galeria28.jpg" />
+								</li>
+								<li data-thumb="img/pictures/thumbs/galeria22.jpg">
+									<img src="img/pictures/galeria22.jpg" />
+								</li>
+								<li data-thumb="img/pictures/thumbs/galeria23.jpg">
+									<img src="img/pictures/galeria23.jpg" />
+								</li>
+							</ul>
+						</div>
 					</div>
 				</div>
 			</div>
 		</div>
 		<!-- container -->
 		<hr class="featurette">
-		<div class="container clearfix pb-5 mb-4">
+		<div class="container clearfix pt-2 pb-5 mb-4">
 			<div class="quote col-lg-8 pull-right-lg-7">
 				<p> La Iglesia es "como un laboratorio espiritual, donde se preparan los medicamentos a fin de que encontremos con qué sanar
 					las heridas que nos ha hecho el mundo"</p>
