subscribe form changes

--- a/index.html
+++ b/index.html
@@ -143,25 +143,22 @@
 			</div>
 		</div>
 		<div class="row row-backbordered">
-			<div class="container panel panel-floating panel-floating-inline col-9 col-lg-8 mb-4">
-				<div class="panel-body py-3">
-					<div class="panel-content col-5">
-						<h3 id="signupMsg" class="text-left">Recibe noticias en tu email</h3>
-					</div>
-					<div class="panel-actions col-7">
-						<form id="signupForm" class="inline-form" action="signup.php" method="post">
-							<i class="fa fa-envelope-o fa-1-5x o-4" aria-hidden="true" style="padding-top:11px;padding-right: 5px;"></i>
-							<input type="email" id="emailSignup" required placeholder="micorreo@ejemplo.com">
-							<button type="submit">
-									<i class="fa fa-paper-plane" aria-hidden="true"></i>
-								</button>
-						</form>
-					</div>
+			<div class="container col-xs-9 col-sm-10 col-md-9 col-lg-8 col-xl-7 panel panel-floating mb-4">
+				<div class="subscribe-form">
+					<h2 id="signupMsg mb-2" style="padding-bottom:0px">Recibe noticias en tu email</h2>
+					<p>Te enviaremos ocasionalmente sólo avisos importantes.</p>
+					<form id="signupForm" class="inline-form mt-4 pt-2" action="signup.php" method="post">
+						<i class="fa fa-envelope-o fa-1-5x o-4" aria-hidden="true" style="padding-top:11px;padding-right: 5px;"></i>
+						<input type="email" id="emailSignup" required placeholder="micorreo@ejemplo.com">
+						<button type="submit">
+							<i class="fa fa-paper-plane" aria-hidden="true"></i>
+						</button>
+					</form>
 				</div>
 			</div>
 		</div>
 		<div class="container clearfix">
-			<h2>Contenido</h2>
+			<h2 class="mt-4">Contenido</h2>
 			<div class="book-cover">
 				<img src="img\book-cover.jpg" alt="Portada del libro">
 				<p class="italic">Basado en el libro "Terapéutica de las Enfermedades Espirituales" del ortodoxo francés Jean-Claude Larchet.</p>
