--- a/index.html
+++ b/index.html
@@ -344,13 +344,18 @@
 		<div class="group-photo-background"> </div>
 	</div>
 	<footer class="main-footer text-center">
-		<a class="link-social" href="https://twitter.com/quetualmaviva">
-			<i class="fa fa-twitter"></i>
-		</a>
-		<a class="link-social" href="https://www.facebook.com/Que-tu-alma-viva-143514645719150">
-			<i class="fa fa-facebook"></i>
-		</a>
-		<p></p>
+		<ul class="list-inline">
+			<li class="list-inline-item social-facebook">
+				<a href="https://www.facebook.com/Que-tu-alma-viva-143514645719150">
+					<i class="fa fa-facebook"></i>
+				</a>
+			</li>
+			<li class="list-inline-item social-twitter">
+				<a href="https://twitter.com/quetualmaviva">
+					<i class="fa fa-twitter"></i>
+				</a>
+			</li>
+		</ul>
 	</footer>
 	<script src="http://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.1.1.min.js"></script>
 	<script src="http://ajax.aspnetcdn.com/ajax/jquery.validate/1.15.0/jquery.validate.min.js"></script>
