change h3 to h2 on date subtitle

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 	<header class="main-header text-center">
 		<span> </span>
 		<h1>Terapéutica de las Enfermedades Espirituales</h1>
-		<h3>8-10 Septiembre 2017</h3>
+		<h2 class="pb-0">8-10 Septiembre 2017</h2>
 		<h3>Suchitlán, Colima</h3>
 	</header>
 	<div class="main-content text-center">
