better alignment on quote

--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
 		<!-- container -->
 		<hr class="featurette">
 		<div class="container clearfix pt-2 pb-5 mb-4">
-			<div class="quote col-lg-8 pull-right-lg-7">
+			<div class="quote col-lg-8 pr-5 pull-right-lg-7">
 				<p> La Iglesia es "como un laboratorio espiritual, donde se preparan los medicamentos a fin de que encontremos con qué sanar
 					las heridas que nos ha hecho el mundo"</p>
 				<div class="quote-by">
@@ -316,7 +316,7 @@
 		</div>
 		<div class="background-dark divider pt-5 pb-4">
 			<div class="container">
-				<h2>Aparta tu lugar</h2>
+				<h2 style="font-weight:600">¡Aparta tu lugar!</h2>
 				<form id="registerForm" class="splash-form" action="register.php" method="post">
 					<p>
 						<label for="name">Nombre*</label>
