--- a/index.html
+++ b/index.html
@@ -136,7 +136,6 @@
 				<p> La Iglesia es "como un laboratorio espiritual, donde se preparan los medicamentos a fin de que encontremos con qué sanar
 					las heridas que nos ha hecho el mundo"</p>
 				<div class="quote-by">
-					<!--<img src="img\juan-crisostomo.jpg" alt="Juan Crisóstomo" class="circle">-->
 					<p>- San Juan Crisóstomo</p>
 					<p class="more-info">siglo IV, Obispo de Constantinopla</p>
 				</div>
@@ -371,6 +370,17 @@
 			// Galleria.loadTheme('https://cdnjs.cloudflare.com/ajax/libs/galleria/1.5.7/themes/classic/galleria.classic.min.js');
 			// Galleria.run('.galleria');
 		})();
+	</script>
+	<script>
+		(function (i, s, o, g, r, a, m) {
+		i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
+			(i[r].q = i[r].q || []).push(arguments)		
+}, i[r].l = 1 * new Date(); a = s.createElement(o),
+			m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m)
+		})(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
+
+		ga('create', 'UA-20911080-2', 'auto');
+		ga('send', 'pageview');
 	</script>
 </body>
 
