--- a/index.html
+++ b/index.html
@@ -144,11 +144,11 @@
 		<div class="row row-backbordered">
 			<div class="container col-xs-9 col-sm-10 col-md-9 col-lg-8 col-xl-7 panel panel-floating mb-4">
 				<div class="subscribe-form">
-					<h2 id="signupMsg mb-2" style="padding-bottom:0px">Recibe noticias en tu email</h2>
+					<h2 id="signupMsg" style="padding-bottom:0px">Recibe noticias en tu email</h2>
 					<p>Te enviaremos ocasionalmente sólo avisos importantes.</p>
 					<form id="signupForm" class="inline-form mt-4 pt-2" action="signup.php" method="post">
 						<i class="fa fa-envelope-o fa-1-5x o-4" aria-hidden="true" style="padding-top:11px;padding-right: 5px;"></i>
-						<input type="email" id="emailSignup" required placeholder="micorreo@ejemplo.com">
+						<input type="email" id="emailSignup" name="emailSignup" required placeholder="micorreo@ejemplo.com">
 						<button type="submit">
 							<i class="fa fa-paper-plane" aria-hidden="true"></i>
 						</button>
@@ -373,10 +373,10 @@
 	</script>
 	<script>
 		(function (i, s, o, g, r, a, m) {
-		i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
-			(i[r].q = i[r].q || []).push(arguments)		
-}, i[r].l = 1 * new Date(); a = s.createElement(o),
-			m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m)
+			i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
+				(i[r].q = i[r].q || []).push(arguments)
+			}, i[r].l = 1 * new Date(); a = s.createElement(o),
+				m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m)
 		})(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
 
 		ga('create', 'UA-20911080-2', 'auto');
